--- a/BowlingCoreMVC/Areas/Identity/Pages/Account/Login.cshtml
+++ b/BowlingCoreMVC/Areas/Identity/Pages/Account/Login.cshtml
@@ -5,12 +5,13 @@
     ViewData["Title"] = "Log in";
 }
 
-<h1>@ViewData["Title"]</h1>
+
 <div class="row">
+    <div class="col-md-4"></div>
     <div class="col-md-4">
         <section>
+            <h1>@ViewData["Title"]</h1>
             <form id="account" method="post">
-                <h4>Use a local account to log in.</h4>
                 <hr />
                 <div asp-validation-summary="All" class="text-danger"></div>
                 <div class="form-group">
@@ -45,6 +46,7 @@
             </form>
         </section>
     </div>
+    <div class="col-md-4"></div>
     @*
         <div class="col-md-6 col-md-offset-2">
             <section>
