--- a/BowlingCoreMVC/Areas/Identity/Pages/Account/Register.cshtml
+++ b/BowlingCoreMVC/Areas/Identity/Pages/Account/Register.cshtml
@@ -4,12 +4,11 @@
     ViewData["Title"] = "Register";
 }
 
-<h1>@ViewData["Title"]</h1>
-
 <div class="row">
+    <div class="col-md-4"></div>
     <div class="col-md-4">
+        <h1>@ViewData["Title"]</h1>
         <form asp-route-returnUrl="@Model.ReturnUrl" method="post">
-            <h4>Create a new account.</h4>
             <hr />
             <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group">
@@ -35,6 +34,7 @@
             <button type="submit" class="btn btn-primary">Register</button>
         </form>
     </div>
+    <div class="col-md-4"></div>
 </div>
 
 @section Scripts {
