--- a/BowlingCoreMVC/Views/Home/Index.cshtml
+++ b/BowlingCoreMVC/Views/Home/Index.cshtml
@@ -26,20 +26,45 @@
         @* User is signed in *@
         else 
         {
-            if (ViewData["MyLast5Games"] != null)
+            <div class="col-lg-12">
+                <h2>Welcome Back to BowlingHub!</h2>
+                 
+            @if (ViewData["TodaysLeague"] != null)
+            {
+                League l = (League)ViewData["TodaysLeague"];
+                <div class="card">
+                    <div class="card-header">Your league "@l.Name" is today!</div>
+                    <div class="card-body">
+                        <a asp-action="QuickCreateSeries" asp-controller="Home" asp-route-LeagueID="@l.ID" class="btn btn-primary btn-block">Start bowling a New Series for @l.Name</a>                        
+                    </div>
+                </div>
+                
+                
+            }
+
+            @if (ViewData["MyLast5Games"] != null && ((ListSingleValue)ViewData["MyLast5Games"]).Keys.Count != 0)
             {
                 <partial name="_CardListSingleValue" model='@ViewData["MyLast5Games"]' />
             }
-
-            if (ViewData["TodaysLeague"] != null)
+            else
             {
-                League l = (League)ViewData["TodaysLeague"];
-                <h1>League @l.Name is Happening today!</h1>
-                <a asp-action="QuickCreateSeries" asp-controller="Home" asp-route-LeagueID="@l.ID" class="btn btn-primary btn-block">New Series for this league tonight</a>
+                <h3>Welcome!</h3>
+                <p>You don't have any games yet; Start recording your games under <a asp-controller="Game" asp-action="Index">'My Games'</a> to see some information here.</p>
             }
-            
 
-            <partial name="_TeamWeekSummary" model='@ViewData["TeamWeekSummary"]' />
+            @if (ViewData["TeamWeekSummary"] != null)
+            {
+                <partial name="_TeamWeekSummary" model='@ViewData["TeamWeekSummary"]' />
+            }
+
+            @if (ViewData["AllTeamsWeekSummary"] != null && ((List<List<TeamLastWeekData>>)ViewData["AllTeamsWeekSummary"]).Count > 0)
+            {
+                foreach (var TWS_List in ((List<List<TeamLastWeekData>>)ViewData["AllTeamsWeekSummary"]))
+                {
+                    <partial name="_TeamWeekSummary" model='@TWS_List' />
+                }
+            }
+            </div>
         }
 
     </div>
